--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Detroit Axle Kit Calculator and Analyzer Tools",
   "main": "index.html",
   "scripts": {
-    "start": "python3 -m http.server 8000",
-    "dev": "python3 -m http.server 8000"
+    "start": "serve -s . -l 8000",
+    "dev": "serve -s . -l 8000"
   },
   "keywords": [
     "calculator",
